--- a/a30.html
+++ b/a30.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-#paral{
-text-align:center;
-color:red;
-}
-</style>
+
+
+
 </head>
 <body>
 <p id="paral">hello world!</p>
 
 <h1 id="paral">hello world!</h1>
 <p>this paragraph is not affetched</p>
+<style>
+h1
+{
+color:red;
+font-weight:normal;
+letter-spacing:4em;
+margin-bottom:1em;
+text-transform:lowercase;
+}
+#paral{
+text-align:center;
+color:red;
+}
+</style>
 </body>
 </html>
