--- a/a1.html
+++ b/a1.html
@@ -1,17 +1,53 @@
 <html>
 <head>
-<title>this is document title</title>
+<style>
+p.dotted{border-style:dotted;
+border-width:10px;
+border-color:red;}
+p.dashed{border-style:dashed;
+border-width:15px;
+border-color:blue;}
+p.solid{border-style:solid;
+border-width:12px;
+border-color:green;}
+p.double{border-style:double;
+border-width:17px;
+border-color:yellow;}
+p.groove{border-style:groove;
+border-width:20px;
+border-color:orange;}
+p.ridge{border-style:ridge;
+border-width:27px;
+border-color:red;}
+p.inset{border-style:inset;
+border-width:30px;
+border-color:blue;}
+p.outset{border-style:outset;
+border-width:35px;
+border-color:green;}
+p.none{border-style:none;
+border-width:40px;
+border-color:red;}
+p.hidden{border-style:hidden;
+border-width:12px;
+border-color:green;}
+p.mix{border-style:dotted dashed solid double;
+border-width:10px 20px 12px 32px;
+border-color:red blue green yellow;}
+</style>
 </head>
-<body bgcolor="#cc00ff">
-<h1>this is a heading</h1>
-<h2>this is a heading</h2>
-<h3>this is a heading</h3>
-<h4>this is a heading</h4>
-<h5>this is a heading</h5>
-<h6>this is a heading</h6>
-
-<h7>this is a heading</h7>
-<p>document content goes here...</p>
+<body>
+<p class="dotted">it technologies</p>
+<p class="dashed">it technologies</p>
+<p class="solid">it technologies</p>
+<p class="double">it technologies</p>
+<p class="groove">it technologies</p>
+<p class="ridge">it technologies</p>
+<p class="inset">it technologies</p>
+<p class="outset">it technologies</p>
+<p class="none">it technologies</p>
+<p class="hidden">it technologies</p>
+<p class="mix">it technologies</p>
 </body>
 </html>
 
